tests/invalid_Programs/type-checker/duplicate_formal.kln
function main(n:integer, n:integer):integer
    1
